Changes for get sensor by room or type or both
